GPencil: Eval data of multi-user datablock with animation data not updated correctly #96145

Closed
opened 2022-03-03 11:23:38 +01:00 by Falk David · 6 comments
Member

System Information
Operating system: Linux-5.15.23-76051523-generic-x86_64-with-glibc2.34 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-03 07:57, hash: ec09ded792
Worked: -

Short description of error
When removing a modifier, changing the layer transform or updating the parent of a grease pencil object that has a multi-user datablock and animation data, the eval data is not updated properly (after a frame change).

Peek 2022-03-03 11-22.webm

Exact steps for others to reproduce the error

  • Open the attached test file.
  • Delete the modifier.
  • Change the frame.
  • The grease pencil object shows the modified version although the modifier has been deleted.

gpencil_eval_update_bug.blend

**System Information** Operating system: Linux-5.15.23-76051523-generic-x86_64-with-glibc2.34 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-03 07:57, hash: `ec09ded792` Worked: - **Short description of error** When removing a modifier, changing the layer transform or updating the parent of a grease pencil object that has a multi-user datablock and animation data, the eval data is not updated properly (after a frame change). [Peek 2022-03-03 11-22.webm](https://archive.blender.org/developer/F12895409/Peek_2022-03-03_11-22.webm) **Exact steps for others to reproduce the error** - Open the attached test file. - Delete the modifier. - Change the frame. - The grease pencil object shows the modified version although the modifier has been deleted. [gpencil_eval_update_bug.blend](https://archive.blender.org/developer/F12895419/gpencil_eval_update_bug.blend)
Author
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Added subscriber: @TinyNick

Added subscriber: @TinyNick

This issue was referenced by e8dc82311d

This issue was referenced by e8dc82311d1a7012adaacc93bcc5e92c0fd7adbf
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Falk David self-assigned this 2022-03-03 16:02:21 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96145
No description provided.